--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,6 +259,7 @@ section {
   flex-wrap: nowrap;
   overflow-x: auto;
   scroll-behavior: smooth;
+  width: 100%;
 }
 
 .card {
